--- a/assets/global.css
+++ b/assets/global.css
@@ -1,23 +1,22 @@
-:root{
-
+:root {
   --bg: #111010;
-  --white: #A8A7AC;
-  --pink: #E56EB2;
-  --bg2: #1A1A1A;
-  --blue: #B28BEB;
-  --green: #50FA7B;
-  --red: #D86159;
-  --yellow:#D6BC7F;
+  --white: #a8a7ac;
+  --pink: #e56eb2;
+  --bg2: #1a1a1a;
+  --blue: #b28beb;
+  --green: #50fa7b;
+  --red: #d86159;
+  --yellow: #d6bc7f;
 
-  --font:'JetBrains Mono', 'Fira Code', monospace
+  --font: "JetBrains Mono", "Fira Code", monospace;
 }
 
-*{
+* {
   color: var(--white);
 }
 
-body{
+body {
   background-color: var(--bg);
   font-family: var(--font);
-
+  scroll-behavior: smooth;
 }
